--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.2.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3",
     "url-loader": "^1.1.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
