--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/enzyme-adapter-react-15": "^1.0.4",
     "@types/jest": "^23.3.10",
     "autoprefixer": "^9.1.1",
     "awesome-typescript-loader": "^5.2.1",
@@ -30,7 +30,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-adapter-react-15": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
@@ -41,6 +41,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-test-renderer": "^15.5.0",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
