--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ts-timepicker",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simple timepicker for React",
   "main": "dist/index.js",
   "scripts": {
@@ -52,12 +52,12 @@
     "url-loader": "^1.1.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.1.5",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "@types/react-portal": "^4.0.1",
+    "@types/react-portal": "^4.0.1"
+  },
+  "dependencies": {
     "react-portal": "^4.2.0"
   },
   "peerDependencies": {
